update discriptors model
